--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
     "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "prisma": "^5.11.0",
     "typescript": "^5"
   },
   "peerDependencies": {
