--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
+  },
+  "volta": {
+    "node": "20.11.1",
+    "yarn": "4.1.1"
   }
 }
