--- a/mysql/conf.d/my.cnf
+++ b/mysql/conf.d/my.cnf
@@ -2,7 +2,7 @@
 default-time-zone = 'Asia/Tokyo'
 character-set-server = utf8mb4
 collation-server = utf8mb4_bin
-default-authentication-plugin = mysql_native_password
+mysql_native_password=ON
 
 [client]
 default-character-set = utf8mb4
