--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
+    "@prisma/client": "5.14.0",
     "next": "14.1.3",
     "next-swagger-doc": "^0.4.0",
     "react": "^17.0.0 || ^18.0.0",
