--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@prisma/client": "5.14.0",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "next-swagger-doc": "^0.4.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
